objects/Contact.object
<CustomObject>
    <fields>
        <fullName>hed__Naming_Exclusions__c</fullName>
        <description>Selecting the Household Name option excludes this Contact from the Household Name. NOTE: The Household Formal Greeting and Household Informal Greeting options are not currently tied to existing product functionality.</description>
        <inlineHelpText>Selecting the Household Name option excludes this Contact from the Household Name. NOTE: The Household Formal Greeting and Household Informal Greeting options are not currently tied to existing product functionality.</inlineHelpText>
        <label>Naming Exclusions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Household__c.Name</fullName>
                </value>
                <value>
                    <fullName>Household__c.Formal_Greeting__c</fullName>
                </value>
                <value>
                    <fullName>Household__c.Informal_Greeting__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Primary_Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the main Household (Account record) this Contact is associated with.</description>
        <inlineHelpText>Lookup to the main Household (Account record) this Contact is associated with.</inlineHelpText>
        <label>Primary Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Primary Household)</relationshipLabel>
        <relationshipName>Household_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is no longer used.</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Citizenship_Status__c</fullName>
        <description>The Contact&apos;s citizenship status.</description>
        <inlineHelpText>The Contact&apos;s citizenship status.</inlineHelpText>
        <label>Citizenship Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>U.S. Citizen or U.S. National</fullName>
                </value>
                <value>
                    <fullName>U.S. Dual Citizen</fullName>
                </value>
                <value>
                    <fullName>U.S. Permanent Resident</fullName>
                </value>
                <value>
                    <fullName>U.S. Refugee or Asylee</fullName>
                </value>
                <value>
                    <fullName>Temporary Resident</fullName>
                </value>
                <value>
                    <fullName>Other (Non-U.S.)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Former_Middle_Name__c</fullName>
        <description>The Contact&apos;s former middle name.</description>
        <inlineHelpText>The Contact&apos;s former middle name.</inlineHelpText>
        <label>Former Middle Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether contact hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Academic_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Academic Program</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Academic_Program_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Military_Background__c</fullName>
        <description>Describe this person&apos;s miltary service, for example, the branch of the military, length of time in the miltary, date of discharge, etc.</description>
        <inlineHelpText>Describe this person&apos;s miltary service, for example, the branch of the military, length of time in the miltary, date of discharge, etc.</inlineHelpText>
        <label>Military Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hed__is_Address_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, this Contact&apos;s address won&apos;t be synced with the Household Default or Seasonal Address. Use this to maintain a separate Mailing Address for this particular Contact. (Applies to Household Contacts only.)</description>
        <inlineHelpText>When selected, this Contact&apos;s address won&apos;t be synced with the Household Default or Seasonal Address. Use this to maintain a separate Mailing Address for this particular Contact. (Applies to Household Contacts only.)</inlineHelpText>
        <label>Do Not Automatically Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Primary_Address_Type__c</fullName>
        <description>Indicate what kind of address the Mailing Address is, for example, Work, Home, or Other.</description>
        <inlineHelpText>Indicate what kind of address the Mailing Address is, for example, Work, Home, or Other.</inlineHelpText>
        <label>Primary Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Vacation Residence</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Primary_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the main Organization (Account record) this Contact is associated with.</description>
        <inlineHelpText>Lookup to the main Organization (Account record) this Contact is associated with.</inlineHelpText>
        <label>Primary Business Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Primary Organization)</relationshipLabel>
        <relationshipName>Organization_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this contact.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Sports_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Sports Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Organization Members</relationshipLabel>
        <relationshipName>Sport_Organization_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Secondary_Address_Type__c</fullName>
        <description>Indicate what kind of address the Secondary Address is, for example, Work, Home, or Other.</description>
        <inlineHelpText>Indicate what kind of address the Secondary Address is, for example, Work, Home, or Other.</inlineHelpText>
        <label>Secondary Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Vacation Residence</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Social_Security_Number__c</fullName>
        <description>Social Security Number. Encrypted for confidentiality. Only users with the View Encrypted Data permission can see the unencrypted value.</description>
        <label>Social Security Number</label>
        <length>12</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>hed__Financial_Aid_Applicant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this student has applied for financial aid.</description>
        <inlineHelpText>Indicates whether this student has applied for financial aid.</inlineHelpText>
        <label>Financial Aid Applicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Mailing_Address_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the mailing address for this Contact is inactive</description>
        <inlineHelpText>Indicates that the mailing address for this Contact is inactive</inlineHelpText>
        <label>Mailing Address Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Educational_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Educational Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Institution Members</relationshipLabel>
        <relationshipName>Institution_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Exclude_from_Household_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, this Contact is excluded from the Household Name.</description>
        <inlineHelpText>When selected, this Contact is excluded from the Household Name.</inlineHelpText>
        <label>Exclude from Household Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autorizaci_n_de_uso_de_datos_personales__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo de autorización de datos personales</description>
        <label>Autorización de uso de datos personales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Exclude_from_Household_Formal_Greeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field currently isn&apos;t tied to product functionality.</description>
        <inlineHelpText>This field currently isn&apos;t tied to product functionality.</inlineHelpText>
        <label>Exclude from Household Formal Greeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Exclude_from_Household_Informal_Greeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field currently isn&apos;t tied to product functionality.</description>
        <inlineHelpText>This field currently isn&apos;t tied to product functionality.</inlineHelpText>
        <label>Exclude from Household Informal Greeting</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>BulkMessageContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>Bulk_SMS_Contacts</label>
    </listViews>
</CustomObject>